--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,32 @@
-arxiv-public-data==0.2.0
-attrs==23.1.0
-Automat==22.10.0
-boto3==1.9.118
-botocore==1.12.253
-certifi==2022.12.7
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==3.0.1
-constantly==15.1.0
-cryptography==38.0.4
-cssselect==1.2.0
-docutils==0.15.2
-e==1.4.5
-filelock==3.12.0
-hyperlink==21.0.0
-idna==2.7
-incremental==22.10.0
-itemadapter==0.8.0
-itemloaders==1.1.0
-jmespath==0.10.0
-lxml==4.9.2
+ansi2html==1.8.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+colorama==0.4.6
+dash==2.12.1
+dash-bootstrap-components==1.4.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==2.2.5
+idna==3.4
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+nest-asyncio==1.5.7
+numpy==1.25.2
 packaging==23.1
-parsel==1.8.1
-pdfminer.six==20221105
-pdfminer3k==1.0.4
-Protego==0.2.1
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-PyDispatcher==2.0.7
-pyOpenSSL==23.1.1
+pandas==2.0.3
+plotly==5.16.1
 python-dateutil==2.8.2
-python-magic==0.4.27
-queuelib==1.6.2
-requests==2.20.0
-requests-file==1.5.1
-s3cmd==2.3.0
-s3transfer==0.2.1
-Scrapy==2.9.0
-service-identity==21.1.0
+pytz==2023.3
+requests==2.31.0
+retrying==1.3.4
 six==1.16.0
-tldextract==3.4.4
-Twisted==22.10.0
-twisted-iocpsupport==1.0.3
-typing-extensions==4.6.2
-unicodedata2==15.0.0
-urllib3==1.24.3
-w3lib==2.1.1
-zope.interface==6.0
+tenacity==8.2.3
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
+Werkzeug==2.2.3
+zipp==3.16.2
